<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QMusic</string>
    <string name="timeformat">00:00</string>
    <string name="qylk">QYLK</string>
    <string name="searchtip">title、artist</string>
    <string name="pt_lrc_download">AUTO LOAD LYRIC</string>
    <string name="ps_lrc_download">QIANQIAN LYRICS</string>
    <string name="pt_unpluge">PAUSE IF UNPLUGGED</string>
    <string name="settings">SET</string>
    <string name="searchresult">RESULT LIST</string>
    <string name="deault_time">30</string>
    <string name="nolrcfind">CLICK HERE</string>
    <string name="readtag1">READ ID3V1</string>
    <string name="writetag">APPLY TO FILE TAG</string>
    <string name="search">SEARCH</string>
     <string name="feedbackhint">在这里填写你对本程序的意见</string>
    <string name="pk_eqpanel">eqpanel</string>
    <string name="scanmusic">扫描歌曲</string>
    <string name="adjustlrc">调整歌词</string>
    <string name="quicksearch">点播</string>
     <string name="mail">Email：xiaofang99@139.com</string>
    <string name="sleep">睡眠定时</string>
    <string name="musicalbum">ALBUM:</string>
    <string name="submit">SUBMIT</string>
    <string name="exit">退出</string>
    <string name="tobackground">后台</string>
    <string name="play">PLAY</string>
    <string name="input_tips">TIME:(min)</string>
    <string name="versionsumary">Android 3.0 or higher</string>
    <string name="start">Start</string>
    <string name="ps_unplunge">AUTO PAUSE MUSIC</string>
    <string name="pt_light">SCREEN ON</string>
    <string name="ps_wifi">UNTILE WIFI USABLE THEN DOWNLOAD PIC</string>
    <string name="pt_shake">SHAKE PHONE</string>
    <string name="ps_shake">KEEP SCREEN ON IS SUGGEST</string>
    <string name="pt_pic">AUTO LOAD HD ALBUM</string>
    <string name="ps_pic">SUPPORT FROM LAST.FM</string>
    <string name="pt_bio">AUTO GET ARTIST INFO</string>
    <string name="ps_bio">support from Last.fm</string>
    <string name="nolibrary">NO LIBRARY,WILL EXIT!</string>
    <string name="pt_lrc_shadow">LYRIC SHADOW</string>
    <string name="ps_lrc_shadow">KALA OK EFFECT</string>
    <string name="pt_lrc_color">LYRIC COLOR</string>
    <string name="ps_lrc_color">COLOR PREVIEW</string>
    <string name="pt_mediabutton">MEDIABUTTON</string>
    <string name="version">2.7.2</string>
    <string name="timercancel">SLEEP CANCELED</string>
    <string name="musictitle">TITLE:</string>
    <string name="musicartist">ARTIST:</string>
    <string name="networkfail">NETWORK PROBLEM</string>
    <string name="operation_cancel">放弃</string>
    <string name="scaning">SCANNING</string>
    <string name="scaned">SCAN DONE</string>
    <string name="setsuc">SUCCESS</string>
    <string name="checkfailed">CHECK FAILED</string>
    <string name="noupdate">IS ALREADY NEW</string>
    <string name="newlist">NEW LIST</string>
    <string name="pt_wifimode">WIFI ONLY</string>
    <string name="delphy">删除SD卡上的文件</string>
    <string name="updatetime">2012–10–19</string>
    <string name="googlepage">GoogleCode Page\n http://code.google.com/p/qylk2011/</string>
    <string name="blogpage">Blog Page\n http://www.qylk.blog.163.com/</string>
    <string name="qq">QQ: 987395671</string>
    <string name="checknew">CLICK TO CHECK UPDATE</string>
    <string name="build">BUILD</string>
    <string name="pt_desklrc">DESKTOP LYRIC</string>
    <string name="ps_desklrc">SHOW LYRIC IN DESKTOP SCREEN</string>
    <string name="pk_light">light</string>
    <string name="ps_light">KEEP LIGHT ON</string>
    <string name="pk_lyric">lyric</string>
    <string name="pk_lrc_shadow">lrcshadow</string>
    <string name="pk_unpluge">unpluge</string>
    <string name="pk_shake">shake</string>
    <string name="pk_pic">pic</string>
    <string name="pk_wifimode">wifimode</string>
    <string name="pk_bio">bio</string>
    <string name="pk_lrc_color">lrccolor</string>
    <string name="pk_mediabutton">mediabutton</string>
    <string name="pt_eqpanel">VISUALIZER</string>
    <string name="pk_desklrc">desklrc</string>
    <string name="pk_about">about</string>
    <string name="author">QYLK 2008–2012</string>
    <string name="updatenow">UPDATE</string>
    <string name="updatelater">LATER</string>
    <string name="ps_eqpanel">SHOW VISUALIZER</string>
    <string name="authorsummary">西安电子科技大学电子工程学院</string>
</resources>